tests/paczka1/fuzzy1/31273659.err
Error in line 4: gXkxJ A686 11,1
Error in line 3: S452 A686 81,2
Error in line 9: S452 S959 269,9
Error in line 20: C2p S9M9 384,9
Error in line 19: S452 S452 74,1
Error in line 30: IFL1I S959 37,17
Error in line 24: IFL1I S452 32,0
